--- a/CSS/styleaccueil.css
+++ b/CSS/styleaccueil.css
@@ -4,64 +4,19 @@ html, body {
 	margin: 0 auto;
 }
 
-section.top {
-	height: 1200px;
-	width: 100%;
+#position-relative {
+background-color: red !important;
 }
 
-#navigation {
-	width: 100%;
-	height: 25%;
-	background-color: grey;
+#un {
+width:100%;
+height: 500px;
 }
 
-#menugauche {
-	float: left;
-	margin-left: 20px;
-	font-size: 35px;
+#deux {
+width: 100%;
+height: 500px;
 }
-
-#menudroit {
-	float: right;
-	margin-right: 30px;
-	margin-top : 145px;
-	font-size: 30px;
-}
-
-.col-12 {
-	background : grey;
-	height: 200px;
-}
-
-#bandeau {
-	max-width: 900px;
-	height: 1000px;
-	display: block;
-	margin: 0 auto;
-	background : purple;
-}
-
-.col-6 {
-
-}
-
-
-.article {
-	background: red;
-	height: 300px;
-	float: left;
-	margin: 10px 1% 0% 1%;
-}
-
-.col-4 {
-width: 31.3%;
-margin: 10px 1%;
-background-color: red;
-}
-
-
-
-
 
 
 @media screen and (min-width: 769px) and (max-width: 1200px) {
